package exceptions;

public class JeuException extends Exception {
    public JeuException(String message) {
        super(message);
    }
}
