package joueur;

/**
 * Interface Humain qui hérite de Joueur et qui implemente la méthode interrogationParClavier()
 * afin de faire jouer l'utilisateur
 */
public interface Humain extends Joueur {
    void interrogationParClavier();
}
