package tools;

public enum Action {
    DEPLACEMENT,
    TIR,
    PECHE;
}
