package tools;

public enum Direction {
    NORD,
    SUD,
    EST,
    OUEST;
}
