package tools;

public enum Nature {
    HUMAIN, IA;
}
