package tools;

public enum TypeNav {
    CHALUTIER,
    DESTROYER,
    SOUSMARIN;
}
