@startuml

title Diagramme de classe Bataille Navale \n


    class Main {
    }


    namespace equipe {
      class equipe.EqBataillon {
      }
    }

  


    namespace equipe {
      class equipe.EqPecheur {
      }
    }

  


    namespace equipe {
      abstract class equipe.Equipe {
      }
    }

  


    namespace exceptions {
      class exceptions.JeuException {
      }
    }

  


    namespace exceptions {
      class exceptions.OccupException {
      }
    }

  


    namespace joueur {
      interface joueur.Humain {
      }
    }

  


    namespace joueur {
      interface joueur.Ia {
      }
    }

  


    namespace joueur {
      interface joueur.Joueur {
      }
    }

  


    namespace manager {
      class manager.Commande {
      }
    }

  


    namespace manager {
      class manager.Jeu {
      }
    }

  


    namespace navire {
      class navire.Chalutier {
      }
    }

  


    namespace navire {
      class navire.Destroyer {
      }
    }

  


    namespace navire {
      abstract class navire.Navire {
      }
    }

  


    namespace navire {
      abstract class navire.NavireProfondeur {
      }
    }

  


    namespace navire {
      abstract class navire.NavireSurface {
      }
    }

  


    namespace navire {
      class navire.SousMarin {
      }
    }

  


    namespace plateau {
      class plateau.CasePlateau {
      }
    }

  


    namespace plateau {
      class plateau.Plateau {
      }
    }

  


    namespace tools {
      enum Action {
      }
    }

  


    namespace tools {
      enum Couleur {
      }
    }

  


    namespace tools {
      enum Direction {
      }
    }

  


    namespace tools {
      enum Nature {
      }
    }

  


    namespace tools {
      enum Statut {
      }
    }

  


    namespace tools {
      class tools.ToolCouleur {
      }
    }

  


    namespace tools {
      enum TypeNav {
      }
    }

  

  equipe.EqBataillon -up-|> equipe.Equipe
  equipe.EqPecheur -up-|> equipe.Equipe
  equipe.Equipe .up.|> joueur.Humain
  equipe.Equipe .up.|> joueur.Ia
  equipe.Equipe o-- tools.Couleur : couleur
  equipe.Equipe o-- manager.Commande : myCommande
  equipe.Equipe o-- tools.Nature : myNature
  equipe.Equipe o-- tools.Statut : myStatut
  manager.Commande o-- tools.Action : actionChoisie
  manager.Commande o-- tools.Direction : directionChoisie
  manager.Commande o-- equipe.Equipe : equipe
  manager.Jeu o-- plateau.Plateau : plateau
  navire.Chalutier -up-|> navire.NavireSurface
  navire.Destroyer -up-|> navire.NavireSurface
  navire.Navire o-- tools.TypeNav : myType
  navire.NavireProfondeur -up-|> navire.Navire
  navire.NavireSurface -up-|> navire.Navire
  navire.SousMarin -up-|> navire.NavireProfondeur
  plateau.CasePlateau o-- navire.Navire : occupant
  plateau.CasePlateau o-- navire.NavireProfondeur : sousmarin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
